--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 .container {
     margin: 0 auto;
     max-width: 1200px;
@@ -31,13 +32,13 @@
 }
 
 .banner {
-    background-image: url('banner.jpg');
+    background-image: url('./banner.jpg');
     background-size: cover;
     height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 2em;
 }
 
